优化首页手风琴

--- a/index.html
+++ b/index.html
@@ -150,6 +150,16 @@
 						<div class="ourServe-r-accordionbox">
 							<!-- 模块开始 -->
 							<div class="accordionbox-item">
+								<!-- 折叠样式 开始 -->
+								<div class="puAway-box">
+									<img src="./img/about/aboutUs.jpg" alt="" />
+									<div class="layer"></div>
+									<div class="layer-box">
+										<i class="pe-7s-jsj"></i>
+										<p>会计审计</p>
+									</div>
+								</div>
+								<!-- 折叠样式 结束 -->
 								<!-- 打开样式 开始 -->
 								<div class="curr-bgbox">
 									<div class="curr-imgbox">
@@ -160,30 +170,11 @@
 									<p>旧城拆迁、抵押贷款评估抵押贷款评估</p>
 								</div>
 								<!-- 打开样式 结束 -->
-								<!-- 折叠样式 开始 -->
-								<div class="puAway-box">
-									<img src="./img/about/choseus.png" alt="" />
-									<div class="layer"></div>
-									<div class="layer-box">
-										<i class="pe-7s-jsj"></i>
-										<p>会计审计</p>
-									</div>
-								</div>
-								<!-- 折叠样式 结束 -->
+
 							</div>
 							<!-- 模块结束 -->
 							<!-- 模块开始 -->
-							<div class="accordionbox-item curr">
-								<!-- 打开样式 开始 -->
-								<div class="curr-bgbox">
-									<div class="curr-imgbox">
-										<img src="./img/about/choseus.png" alt="">
-									</div>
-									<i class="pe-7s-zx"></i>
-									<p>资产重组、企业收购</p>
-									<p>旧城拆迁、抵押贷款评估抵押贷款评估</p>
-								</div>
-								<!-- 打开样式 结束 -->
+							<div class="accordionbox-item">
 								<!-- 折叠样式 开始 -->
 								<div class="puAway-box">
 									<img src="./img/about/choseus.png" alt="" />
@@ -194,20 +185,20 @@
 									</div>
 								</div>
 								<!-- 折叠样式 结束 -->
-							</div>
-							<!-- 模块结束 -->
-							<!-- 模块开始 -->
-							<div class="accordionbox-item">
 								<!-- 打开样式 开始 -->
 								<div class="curr-bgbox">
 									<div class="curr-imgbox">
 										<img src="./img/about/choseus.png" alt="">
 									</div>
-									<i class="pe-7s-pg"></i>
+									<i class="pe-7s-zx"></i>
 									<p>资产重组、企业收购</p>
 									<p>旧城拆迁、抵押贷款评估抵押贷款评估</p>
 								</div>
 								<!-- 打开样式 结束 -->
+							</div>
+							<!-- 模块结束 -->
+							<!-- 模块开始 -->
+							<div class="accordionbox-item">
 								<!-- 折叠样式 开始 -->
 								<div class="puAway-box">
 									<img src="./img/about/choseus.png" alt="" />
@@ -218,20 +209,20 @@
 									</div>
 								</div>
 								<!-- 折叠样式 结束 -->
-							</div>
-							<!-- 模块结束 -->
-							<!-- 模块开始 -->
-							<div class="accordionbox-item">
 								<!-- 打开样式 开始 -->
 								<div class="curr-bgbox">
 									<div class="curr-imgbox">
 										<img src="./img/about/choseus.png" alt="">
 									</div>
-									<i class="pe-7s-cz"></i>
+									<i class="pe-7s-pg"></i>
 									<p>资产重组、企业收购</p>
 									<p>旧城拆迁、抵押贷款评估抵押贷款评估</p>
 								</div>
 								<!-- 打开样式 结束 -->
+							</div>
+							<!-- 模块结束 -->
+							<!-- 模块开始 -->
+							<div class="accordionbox-item">
 								<!-- 折叠样式 开始 -->
 								<div class="puAway-box">
 									<img src="./img/about/choseus.png" alt="" />
@@ -242,30 +233,16 @@
 									</div>
 								</div>
 								<!-- 折叠样式 结束 -->
-							</div>
-							<!-- 模块结束 -->
-							<!-- 模块开始 -->
-							<div class="accordionbox-item">
 								<!-- 打开样式 开始 -->
 								<div class="curr-bgbox">
 									<div class="curr-imgbox">
 										<img src="./img/about/choseus.png" alt="">
 									</div>
-									<i class="pe-7s-home"></i>
+									<i class="pe-7s-cz"></i>
 									<p>资产重组、企业收购</p>
 									<p>旧城拆迁、抵押贷款评估抵押贷款评估</p>
 								</div>
 								<!-- 打开样式 结束 -->
-								<!-- 折叠样式 开始 -->
-								<div class="puAway-box">
-									<img src="./img/about/choseus.png" alt="" />
-									<div class="layer"></div>
-									<div class="layer-box">
-										<i class="pe-7s-home"></i>
-										<p>造价咨询</p>
-									</div>
-								</div>
-								<!-- 折叠样式 结束 -->
 							</div>
 							<!-- 模块结束 -->
 						</div>
