--- a/contact.html
+++ b/contact.html
@@ -115,7 +115,7 @@
 					<div class="col-lg-12">
 						<div class="Content">
 							<h2>
-								Contact
+								联系我们
 							</h2>
 							<div class="links">
 								<ul>
