--- a/index.html
+++ b/index.html
@@ -87,19 +87,19 @@
 									新闻中心
 								</a>
 								<div class="dropdown-menu" aria-labelledby="blog">
-									<a class="dropdown-item" href="blog.html">华文动态</a>
-									<a class="dropdown-item" href="blogDetails.html">华文下午茶</a>
-									<a class="dropdown-item" href="blogDetails.html">专业解读</a>
+									<a class="dropdown-item" href="">华文动态</a>
+									<a class="dropdown-item" href="">华文下午茶</a>
+									<a class="dropdown-item" href="">专业解读</a>
 								</div>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="contact.html">政策法规</a>
+								<a class="nav-link" href="">政策法规</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="contact.html">华文讲堂</a>
+								<a class="nav-link" href="">华文讲堂</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="contact.html">加入我们</a>
+								<a class="nav-link" href="l">加入我们</a>
 							</li>
 						</ul>
 						<div class="call_btn">
@@ -599,7 +599,7 @@
 						<div class="col-sm-6 col-xl-4">
 							<div class="footer-info-ulbox">
 								<div class="footer-links">
-									<a href="#">关于我们</a>
+									<div>关于我们</div>
 									<ul>
 										<li><a href="#">华文动态</a></li>
 										<li><a href="#">华文下午茶</a></li>
@@ -608,7 +608,7 @@
 									</ul>
 								</div>
 								<div class="footer-links">
-									<a href="#">服务领域</a>
+									<div>服务领域</div>
 									<ul>
 										<li><a href="#">会计审计</a></li>
 										<li><a href="#">税务咨询</a></li>
