--- a/aboutUs.html
+++ b/aboutUs.html
@@ -552,7 +552,7 @@
 						<div class="col-sm-6 col-xl-4">
 							<div class="footer-info-ulbox">
 								<div class="footer-links">
-									<a href="#">关于我们</a>
+									<div>关于我们</div>
 									<ul>
 										<li><a href="#">华文动态</a></li>
 										<li><a href="#">华文下午茶</a></li>
@@ -561,7 +561,7 @@
 									</ul>
 								</div>
 								<div class="footer-links">
-									<a href="#">服务领域</a>
+									<div>服务领域</div>
 									<ul>
 										<li><a href="#">会计审计</a></li>
 										<li><a href="#">税务咨询</a></li>
