--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 								<a class="nav-link" href="">华文讲堂</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="l">加入我们</a>
+								<a class="nav-link" href="joinUs.html">加入我们</a>
 							</li>
 						</ul>
 						<div class="call_btn">
