--- a/joinUs-society.html
+++ b/joinUs-society.html
@@ -114,40 +114,102 @@
 		</header>
 		<!--头部导航 结束 -->
 		<!-- 背景区域 开始 -->
-		<section id="service-banner" class="service-banner"></section>	
+		<section id="joinUs-banner" class="joinUs-banner"></section>	
 		<!--  背景区域 结束  -->
-
-		<section class="service-info">
+    <section class="joinUs-info">
 			<div class="container-fluid">
 				<!-- 内容区域 开始 -->
-				<div class="row justify-content-center">
-					<div class="service-tab-centent">
-						<!-- 华协同的一体化管理 开始 -->
+				<div>
+					<div class="joinUs-tab-centent">
+
 						<div class="collaborate-integration">
 							<!-- 标题 开始 -->
 							<div class="huawen-title-box">
 								<div class="titleText-t">
 									<div class="header-xian"></div>
-									<div class="header-title">协同的一体化管理</div>
+									<div class="header-title">社会招聘</div>
 									<div class="header-xian"></div>
 								</div>
 								<div class="eltitleText-t"></div>
 							</div>
 							<!-- 标题 结束 -->
-							<div class="info-box">
-								<div class="text-box">
-									河北华文财税咨询有限公司实现了一体化、距阵制管理专业服务机构，并已经初步形成“内部共享服务”的管理模式<br />执行标准化管理流程统一的业务管理、统一的执业标准、统一的信息化系统。
-								</div>
-							</div>
-							<div class="service-bg-box">
-								<img src="./img/service/service-bg1.png" alt="" />
-								<img src="./img/service/service-bg2.png" alt="" />
-								<img src="./img/service/service-bg3.png" alt="" />
-								<img src="./img/service/service-bg4.png" alt="" />
+							<div class="row justify-content-center joinUs-bg-box">
+                <div class="society-serch-box">
+                  <!-- 工作地选择 开始 -->
+                  <div class="society-add-box">
+                    <select class="form-control select" id='select_add_1'>
+                      <option value='add0'disabled selected hidden>请选择工作地区</option>
+                      <option value='add1' style="display: block;margin: 20px;font-size: 16px;">北京</option>
+                      <option value='add2'>上海</option>
+                    </select>
+                  </div>
+                  <!-- 工作地选择 结束 -->
+                  <!-- 发布时间 开始 -->
+                  <div class="society-time-box">
+                    <select class="form-control select" id='select_time_1'>
+                      <option value='time0'disabled selected hidden>发布时间</option>
+                      <option value='time1'>2022-03</option>
+                      <option value='time2'>2022-04</option>
+                    </select>
+                  </div>
+                  <!-- 发布时间 结束 -->
+                  <!-- 搜索框 开始 -->
+                  <div class="society-serch1-box">
+                    <img src="./img/joinUs/1657554509965.png" alt="" class="serch1-img1" />
+                    <select class="form-control select" id='select_serch_1'>
+                      <option value='time0'disabled selected hidden>发布时间</option>
+                      <option value='time1'>2022-03</option>
+                      <option value='time2'>2022-04</option>
+                    </select>
+                    <img src="./img/joinUs/1657554568819.png" alt="" class="serch1-btnimg"/>
+                  </div>
+                  <!-- 搜索框 结束 -->
+                </div>
+                <!-- 招聘模块 开始 -->
+                <div class="recruitment-box">
+                  <div class="recruitment-titlebox">
+                    <div class="r-1"></div>
+                    <div class="r-box">
+                      <div class="r-2">职位名称</div>
+                      <div class="r-3">招聘人数</div>
+                      <div class="r-4">工作地点</div>
+                      <div class="r-5">薪资待遇</div>
+                      <div class="r-6">发布时间</div>
+                    </div>
+                  </div>
+                  <!-- 手风琴 开始 -->
+                  <div class="recruitment-tabs-box" id="recruitment">
+                    <div class="tabs_items">
+
+                      <div class="tabs_items-title">
+                        <div class="r-1">+</div>
+                        <div class="r-box">
+                          <div class="r-2">财务经理</div>
+                          <div class="r-3">1人</div>
+                          <div class="r-4">邯郸</div>
+                          <div class="r-5">4k - 6k</div>
+                          <div class="r-6">2022-7-5</div>
+                        </div>
+                      </div>
+
+                      <div class="tabs_items-info">
+                        <p class="tabs_items-info-p">
+                          岗位职责：<br />1.负责日常会计处理、财务核算；<br /> 2.负责账簿登记工作、并进行账实核对；<br /> 3.负责结账、编制会计报表，安排各项税费申报事宜； <br />4.负责财税相关的业务办理； <br />5.负责纳税申报和各类财务报表的编制工作； <br />6.完成上级安排的临时工作。 <br />任职要求： <br />1.本科及以上学历，会计学、财务管理专业，有会计证 <br />2.有3年以上的工作经验 <br />3.熟悉国家各项相关财务、税务、审计等法规政策，能熟悉的使用office办公软件，熟悉使用财务应用软件； <br />4.责任心和原则性强，严禁勤勉，抗压能力强。 <br />
+                        </p>
+                        <p class="tabs_items-info-p2"><span>简历请投放至邮箱：</span><span style="color:#2D6EC1;">18518161909@163.com</span></p>
+                      </div>
+                    </div>
+                    <div class="tabs_items"></div>
+                    <div class="tabs_items"></div>
+                  </div>
+
+                  <!-- 手风琴 结束 -->
+                </div>
+                <!-- 招聘模块 结束 -->
 							</div>
 
 						</div>
-						<!-- 协同的一体化管理 结束 -->
+
 					</div>
 				</div>
 				<!-- 内容区域 结束 -->
