--- a/joinUs.html
+++ b/joinUs.html
@@ -114,40 +114,51 @@
 		</header>
 		<!--头部导航 结束 -->
 		<!-- 背景区域 开始 -->
-		<section id="service-banner" class="service-banner"></section>	
+		<section id="joinUs-banner" class="joinUs-banner"></section>	
 		<!--  背景区域 结束  -->
-
-		<section class="service-info">
+    <section class="joinUs-info">
 			<div class="container-fluid">
 				<!-- 内容区域 开始 -->
-				<div class="row justify-content-center">
-					<div class="service-tab-centent">
-						<!-- 华协同的一体化管理 开始 -->
+				<div>
+					<div class="joinUs-tab-centent">
+
 						<div class="collaborate-integration">
 							<!-- 标题 开始 -->
 							<div class="huawen-title-box">
 								<div class="titleText-t">
 									<div class="header-xian"></div>
-									<div class="header-title">协同的一体化管理</div>
+									<div class="header-title">加入我们</div>
 									<div class="header-xian"></div>
 								</div>
 								<div class="eltitleText-t"></div>
 							</div>
 							<!-- 标题 结束 -->
-							<div class="info-box">
-								<div class="text-box">
-									河北华文财税咨询有限公司实现了一体化、距阵制管理专业服务机构，并已经初步形成“内部共享服务”的管理模式<br />执行标准化管理流程统一的业务管理、统一的执业标准、统一的信息化系统。
+							<div class="row justify-content-center joinUs-bg-box">
+								<div class="col-xl-4 col-md-4 col-lg-4 joinUs-items-box">
+									<a href="" class="joinUs-items-a">
+										<img src="./img/joinUs/join-qiye.png" alt="">
+										<p class="join-title-1">企业合作</p>
+										<p class="join-title-2">合作伙伴</p>
+									</a>
 								</div>
-							</div>
-							<div class="service-bg-box">
-								<img src="./img/service/service-bg1.png" alt="" />
-								<img src="./img/service/service-bg2.png" alt="" />
-								<img src="./img/service/service-bg3.png" alt="" />
-								<img src="./img/service/service-bg4.png" alt="" />
+								<div class="col-xl-4 col-md-4 col-lg-4">
+									<a href="joinUs-society.html" class="joinUs-items-a">
+										<img src="./img/joinUs/join-shehui.png" alt="">
+										<p class="join-title-1">社会招聘</p>
+										<p class="join-title-2">合作伙伴</p>
+									</a>
+								</div>
+								<div class="col-xl-4 col-md-4 col-lg-4">
+									<a href="" class="joinUs-items-a">
+										<img src="./img/joinUs/join-xiaoyuan.png" alt="">
+										<p class="join-title-1">校园招聘</p>
+										<p class="join-title-2">合作伙伴</p>
+									</a>
+								</div>
 							</div>
 
 						</div>
-						<!-- 协同的一体化管理 结束 -->
+
 					</div>
 				</div>
 				<!-- 内容区域 结束 -->
