--- a/joinUs-company.html
+++ b/joinUs-company.html
@@ -108,57 +108,141 @@
 		<!--头部导航 结束 -->
 		<!-- 背景区域 开始 -->
 		<section id="joinUs-banner" class="joinUs-banner"></section>	
-		<!--  背景区域 结束  -->
-    <section class="joinUs-info">
+    <!--  背景区域 结束  -->
+    
+    <!-- 项目合作条件 开始-->
+    <section class="joinUs-company-info">
 			<div class="container-fluid">
-				<!-- 内容区域 开始 -->
-				<div>
-					<div class="joinUs-tab-centent">
-
-						<div class="collaborate-integration">
-							<!-- 标题 开始 -->
-							<div class="huawen-title-box">
-								<div class="titleText-t">
-									<div class="header-xian"></div>
-									<div class="header-title">加入我们</div>
-									<div class="header-xian"></div>
-								</div>
-								<div class="eltitleText-t"></div>
-							</div>
-							<!-- 标题 结束 -->
-							<div class="row justify-content-center joinUs-bg-box">
-								<div class="col-xl-4 col-md-4 col-lg-4 joinUs-items-box">
-									<a href="joinUs-company.html" class="joinUs-items-a">
-										<img src="./img/joinUs/join-qiye.png" alt="">
-										<p class="join-title-1">企业合作</p>
-										<p class="join-title-2">合作伙伴</p>
-									</a>
-								</div>
-								<div class="col-xl-4 col-md-4 col-lg-4">
-									<a href="joinUs-society.html" class="joinUs-items-a">
-										<img src="./img/joinUs/join-shehui.png" alt="">
-										<p class="join-title-1">社会招聘</p>
-										<p class="join-title-2">合作伙伴</p>
-									</a>
-								</div>
-								<div class="col-xl-4 col-md-4 col-lg-4">
-									<a href="joinUs-campus.html" class="joinUs-items-a">
-										<img src="./img/joinUs/join-xiaoyuan.png" alt="">
-										<p class="join-title-1">校园招聘</p>
-										<p class="join-title-2">合作伙伴</p>
-									</a>
-								</div>
-							</div>
-
-						</div>
-
-					</div>
-				</div>
-				<!-- 内容区域 结束 -->
-				
+        <div class="row justify-content-center">
+          <div class="col-xl-6 company-title-imgbox">
+            <img src="./img/joinUs/company-bg-1.png" alt="" />
+          </div>
+          <div class="col-xl-6 company-title-info">
+            <p class="title-info-1">项目合作</p>
+            <div class="title-info-xian1"></div>
+            <div class="title-info-2">
+              <p>认同并遵守华文的《华文合作服务协议》</p>
+              <p>有较好的企业客户资源</p>
+              <p>勇于挑战 ，愿意投身财税行业</p>
+              <p>有丰富的企业资源，能够引荐介绍关键角色</p>
+              <div class="title-info-xian2"></div>
+              <p>依托您个人的人脉资源为我们介绍企业客户</p>
+              <p>您通过配合我们的客户经理完成与客户的沟通，实现客户签约</p>
+            </div>
+            <button class="title-info-btn">立即咨询</button>
+          </div>
+        </div>
 			</div>
-			
-		</section>
+    </section>
+    <!-- 项目合作条件 结束-->
+    <!-- 合作流程 开始-->
+    <section class="oinUs-company-lc">
+      <div class="container-fluid">
+        <div class="row justify-content-center">
+          <div class="company-lc-box">
+            <div class="lc-box-items">
+              <img src="./img/joinUs/company-icon-1.png" alt="" />
+              <p>联系负责人</p>
+            </div>
+            <div class="lc-box-items">
+              <img src="./img/joinUs/company-icon-2.png" alt="" />
+              <p>申请成功</p>
+            </div>
+            <div class="lc-box-items">
+              <img src="./img/joinUs/company-icon-3.png" alt="" />
+              <p>一对一指导</p>
+            </div>
+            <div class="lc-box-items">
+              <img src="./img/joinUs/company-icon-4.png" alt="" />
+              <p>开展业务</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- 合作流程 结束-->
+
+    <!-- 我们的客户 开始 -->
+    <section id="customer" class="customer">
+      <div class="container-fluid">
+        <div class="row justify-content-center">
+          <div class="col-lg-12 col-md-12">
+            <div class="section-title-box">
+              <div>
+                <div class="section-l-title">我们的客户</div>
+                <p class="section-l-eltitle">Customer</p>
+              </div>
+            </div>
+            <div class="customer-bg-box">
+              <img src="./img/customer-bg1.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- 我们的客户 结束 -->
+
+
+    <!-- 加入我们 开始-->
+    <section class="joinUs-company-joinbox">
+        <div class="container-fluid">
+          <div class="row justify-content-center">
+            <div class="col-xl-6 company-joinbox-i">
+              <p class="company-joinbox-i-title">加入我们</p>
+              <div class="joinbox-i-xian1"></div>
+              <form action="" id="" method="POST">
+                  <div class="row">
+                    <div class="col-md-6">
+                      <div class="form-group form-element">
+                        <input type="text" class="form-input input-field" id="name" name="name" placeholder="姓名">
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="form-group form-element">
+                        <input type="text" class="form-input input-field" id="tel" name="tel" placeholder="电话">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                      <div class="col-md-6">
+                        <div class="form-group form-element">
+                          <select class="form-control select">
+                              <option value='add0'disabled selected hidden>省份</option>
+                              <option value='add1' style="display: block;margin: 20px;font-size: 16px;">北京</option>
+                              <option value='add2'>上海</option>
+                            </select>
+                        </div>
+                      </div>
+                    <div class="col-md-6">
+                        <div class="form-group form-element">
+                          <select class="form-control select">
+                            <option value='city0'disabled selected hidden>城市</option>
+                            <option value='city1' style="display: block;margin: 20px;font-size: 16px;">北京</option>
+                            <option value='city2'>上海</option>
+                          </select>
+                        </div>
+                      </div>
+                  </div>
+                  <div class="contact-frm-btn">
+                    <button type="submit" class="mr_btn_1">提交申请</button>
+                    <button class="mr_btn_2">400-995-2686</button>
+                  </div>
+                </form>
+
+            </div>
+
+            <div class="col-xl-6 company-joinbox-i">
+              <div class="company-joinbox-img">
+                <img src="./img/joinUs/company-bg-2.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
+    <!-- 加入我们 结束-->
+
+
+
 
 		<!-- footer 开始 -->
 		<footer class="footer">
