--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
 									新闻中心
 								</a>
 								<div class="dropdown-menu" aria-labelledby="blog">
-									<a class="dropdown-item" href="">华文动态</a>
-									<a class="dropdown-item" href="">华文下午茶</a>
-									<a class="dropdown-item" href="">专业解读</a>
+									<a class="dropdown-item" href="news.html?id=1">华文动态</a>
+									<a class="dropdown-item" href="news.html?id=2">华文下午茶</a>
+									<a class="dropdown-item" href="news.html?id=3">专业解读</a>
 								</div>
 							</li>
 							<li class="nav-item">
@@ -577,22 +577,21 @@
 		</section>
 
 		<!-- 我们的团队 结束 -->
-
-		<!-- footer 开始 -->
-		<footer class="footer">
-			<div class="footerTop">
-				<div class="container">
-					<div class="row justify-content-center">
-						<div class="col-lg-8 col-md-10">
-							<div class="sectionHeader">
-								<h2>点击咨询，拥有专属您的财税方案</h2>
-								<p>Click consultation to have your own fiscal and tax plan</p>
-								<a href="javascript:0;" class="footer-consult-btn">立即咨询</a>
-							</div>
+		<div class="footerTop">
+			<div class="container">
+				<div class="row justify-content-center">
+					<div class="col-lg-8 col-md-10">
+						<div class="sectionHeader">
+							<h2>点击咨询，拥有专属您的财税方案</h2>
+							<p>Click consultation to have your own fiscal and tax plan</p>
+							<a href="javascript:0;" class="footer-consult-btn">立即咨询</a>
 						</div>
 					</div>
 				</div>
 			</div>
+		</div>
+		<!-- footer 开始 -->
+		<footer class="footer">
 			<div class="footer-info-box">
 				<div class="container-fluid">
 					<div class="row">
