政策法规页、详情页

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!-->
 <html lang="zxx">
-	<!--<![endif]-->
 
 	<head>
 		<meta charset="utf-8">
@@ -93,7 +92,7 @@
 								</div>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="">政策法规</a>
+								<a class="nav-link" href="regulations.html">政策法规</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="">华文讲堂</a>
