--- a/joinUs.html
+++ b/joinUs.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
+<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
+<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!-->
+<html lang="zxx">
+	<!--<![endif]-->
 
 	<head>
 		<meta charset="utf-8">
@@ -80,13 +87,13 @@
 									新闻中心
 								</a>
 								<div class="dropdown-menu" aria-labelledby="blog">
-									<a class="dropdown-item" href="">华文动态</a>
-									<a class="dropdown-item" href="">华文下午茶</a>
-									<a class="dropdown-item" href="">专业解读</a>
+									<a class="dropdown-item" href="news.html?id=1">华文动态</a>
+									<a class="dropdown-item" href="news.html?id=2">华文下午茶</a>
+									<a class="dropdown-item" href="news.html?id=3">专业解读</a>
 								</div>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="">政策法规</a>
+								<a class="nav-link" href="regulations.html">政策法规</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="">华文讲堂</a>
