--- a/news.html
+++ b/news.html
@@ -93,7 +93,7 @@
 								</div>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="">政策法规</a>
+								<a class="nav-link" href="regulations.html">政策法规</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="">华文讲堂</a>
@@ -134,7 +134,7 @@
               <div class="row">
                 <div class="col-xl-9 news-itemslist-box">
                   <div class="news-itemslist">
-                    <a href="javascript:0;">
+                    <a href="newsDetails.html">
                       <img src="./img/news/icon-zwf.png" alt="" class="items-img"/>
                       <div class="items-info-box">
                         <p class="items-info-title">5月1日起免增值税！</p>
@@ -150,7 +150,7 @@
                     </a>
                   </div>
                   <div class="news-itemslist">
-                    <a href="javascript:0;">
+                    <a href="newsDetails.html">
                       <img src="./img/news/icon-zwf.png" alt="" class="items-img"/>
                       <div class="items-info-box">
                         <p class="items-info-title">5月1日起免增值税！</p>
@@ -165,7 +165,7 @@
                     </a>
                   </div>
                   <div class="news-itemslist">
-                    <a href="javascript:0;">
+                    <a href="newsDetails.html">
                       <img src="./img/news/icon-zwf.png" alt="" class="items-img"/>
                       <div class="items-info-box">
                         <p class="items-info-title">5月1日起免增值税！</p>
