--- a/newsDetails.html
+++ b/newsDetails.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
@@ -115,150 +114,124 @@
 		</header>
 		<!--头部导航 结束 -->
 		<!-- 背景区域 开始 -->
-		<section id="joinUs-banner" class="joinUs-banner"></section>	
+		<section id="newsSection" class="newsSection"></section>	
 		<!--  背景区域 结束  -->
-    <section class="joinUs-info">
+		<section class="news-info">
 			<div class="container-fluid">
 				<!-- 内容区域 开始 -->
-				<div>
-					<div class="joinUs-tab-centent">
+        <div class="news-tab-centent">
+          <div class="row details-centent-box">
+            <div class="news-details-title">
+              <img src="./img/icon-jxl.png" />
+              <span>献礼“七一” ‖华文财税联合党支部开展庆祝建党101周年系列活动</span>
+            </div>
+            <div class="col-xl-9 details-itemslist-box">
 
-						<div class="collaborate-integration">
-							<!-- 标题 开始 -->
-							<div class="huawen-title-box">
-								<div class="titleText-t">
-									<div class="header-xian"></div>
-									<div class="header-title">社会招聘</div>
-									<div class="header-xian"></div>
-								</div>
-								<div class="eltitleText-t"></div>
-							</div>
-							<!-- 标题 结束 -->
-							<div class="row justify-content-center joinUs-bg-box">
-                <div class="society-serch-box">
-                  <!-- 工作地选择 开始 -->
-                  <div class="society-add-box">
-                    <select class="form-control select" id='select_add_1'>
-                      <option value='add0'disabled selected hidden>请选择工作地区</option>
-                      <option value='add1' style="display: block;margin: 20px;font-size: 16px;">北京</option>
-                      <option value='add2'>上海</option>
-                    </select>
-                  </div>
-                  <!-- 工作地选择 结束 -->
-                  <!-- 发布时间 开始 -->
-                  <div class="society-time-box">
-                    <select class="form-control select" id='select_time_1'>
-                      <option value='time0'disabled selected hidden>发布时间</option>
-                      <option value='time1'>2022-03</option>
-                      <option value='time2'>2022-04</option>
-                    </select>
-                  </div>
-                  <!-- 发布时间 结束 -->
-                  <!-- 搜索框 开始 -->
-                  <div class="society-serch1-box">
-                    <img src="./img/joinUs/1657554509965.png" alt="" class="serch1-img1" />
-                    <select class="form-control select" id='select_serch_1'>
-                      <option value='time0'disabled selected hidden>发布时间</option>
-                      <option value='time1'>2022-03</option>
-                      <option value='time2'>2022-04</option>
-                    </select>
-                    <img src="./img/joinUs/1657554568819.png" alt="" class="serch1-btnimg"/>
-                  </div>
-                  <!-- 搜索框 结束 -->
-                </div>
-                <!-- 招聘模块 开始 -->
-                <div class="recruitment-box">
-                  <div class="recruitment-titlebox">
-                    <div class="r-1"></div>
-                    <div class="r-box">
-                      <div class="r-2">职位名称</div>
-                      <div class="r-3">招聘人数</div>
-                      <div class="r-4">工作地点</div>
-                      <div class="r-5">薪资待遇</div>
-                      <div class="r-6">发布时间</div>
+              <div class="details-info-t">
+                <span>来源：</span>
+                <img src="./img/news/icon-wt.png" />
+                <span style="color: #333333;">新华社</span>
+                <span class="items-info-s">时间：2022-06-17</span>
+              </div>
+
+              <div class="info-centent-box">
+                <img src="./img/news/icon-zwf.png" alt="" />
+                <p>七一前夕，华文财税联合党支部开展“献礼七一”系列活动。在党支部书记张丽的带领下，全体参会党员重温入党誓词，用庄严的誓词唤醒初心、鼓舞精神，提醒着大家党员的身份和身上肩负的责任。</p>
+              </div>
+
+
+
+
+            </div>
+            <div class="col-xl-3 news-popular-box details-popular-box">
+              <div class="popular-div">
+                <div class="popular-keyWords-box">
+                  <div class="keyWords-title">热门关键词</div>
+                  <div class="keyWords-items-box">
+                    <div>
+                      <a href="javascript:0;" class="active">财务税收</a>
                     </div>
-                  </div>
-                  <!-- 手风琴 开始 -->
-                  <div class="recruitment-tabs-box" id="recruitment">
-                    <div class="tabs_items">
-
-                      <a href="javascript:0;" class="tabs_items-title">
-                        <div class="r-1">+</div>
-                        <div class="r-box">
-                          <div class="r-2">财务经理</div>
-                          <div class="r-3">1人</div>
-                          <div class="r-4">邯郸</div>
-                          <div class="r-5">4k - 6k</div>
-                          <div class="r-6">2022-7-5</div>
-                        </div>
-                      </a>
-
-                      <div class="tabs_items-info">
-                        <p class="tabs_items-info-p">
-                          岗位职责：<br />1.负责日常会计处理、财务核算；<br /> 2.负责账簿登记工作、并进行账实核对；<br /> 3.负责结账、编制会计报表，安排各项税费申报事宜； <br />4.负责财税相关的业务办理； <br />5.负责纳税申报和各类财务报表的编制工作； <br />6.完成上级安排的临时工作。 <br />任职要求： <br />1.本科及以上学历，会计学、财务管理专业，有会计证 <br />2.有3年以上的工作经验 <br />3.熟悉国家各项相关财务、税务、审计等法规政策，能熟悉的使用office办公软件，熟悉使用财务应用软件； <br />4.责任心和原则性强，严禁勤勉，抗压能力强。 <br />
-                        </p>
-												<p class="tabs_items-info-p2"><span>简历请投放至邮箱：</span><span style="color:#2D6EC1;">18518161909@163.com</span></p>
-												<a href="javascript:0;" class="items-info-btn">投递简历</a>
-                      </div>
+                    <div>
+                      <a href="javascript:0;">财务税收</a>
                     </div>
-                    <div class="tabs_items">
-                      <a href="javascript:0;" class="tabs_items-title">
-                        <div class="r-1">+</div>
-                        <div class="r-box">
-                          <div class="r-2">出纳</div>
-                          <div class="r-3">3人</div>
-                          <div class="r-4">邯郸</div>
-                          <div class="r-5">4k - 6k</div>
-                          <div class="r-6">2022-7-5</div>
-                        </div>
-											</a>
-
-											<div class="tabs_items-info">
-                        <p class="tabs_items-info-p">
-                          岗位职责：<br />1.负责日常会计处理、财务核算；<br /> 2.负责账簿登记工作、并进行账实核对；<br /> 3.负责结账、编制会计报表，安排各项税费申报事宜； <br />4.负责财税相关的业务办理； <br />5.负责纳税申报和各类财务报表的编制工作； <br />6.完成上级安排的临时工作。 <br />任职要求： <br />1.本科及以上学历，会计学、财务管理专业，有会计证 <br />2.有3年以上的工作经验 <br />3.熟悉国家各项相关财务、税务、审计等法规政策，能熟悉的使用office办公软件，熟悉使用财务应用软件； <br />4.责任心和原则性强，严禁勤勉，抗压能力强。 <br />
-                        </p>
-												<p class="tabs_items-info-p2"><span>简历请投放至邮箱：</span><span style="color:#2D6EC1;">18518161909@163.com</span></p>
-												<a href="javascript:0;" class="items-info-btn">投递简历</a>
-                      </div>
-										</div>
-                    <div class="tabs_items">
-                      <a href="javascript:0;" class="tabs_items-title">
-                        <div class="r-1">+</div>
-                        <div class="r-box">
-                          <div class="r-2">会计</div>
-                          <div class="r-3">2人</div>
-                          <div class="r-4">邯郸</div>
-                          <div class="r-5">4k - 6k</div>
-                          <div class="r-6">2022-7-5</div>
-                        </div>
-											</a>
-
-											<div class="tabs_items-info">
-                        <p class="tabs_items-info-p">
-                          岗位职责：<br />1.负责日常会计处理、财务核算；<br /> 2.负责账簿登记工作、并进行账实核对；<br /> 3.负责结账、编制会计报表，安排各项税费申报事宜； <br />4.负责财税相关的业务办理； <br />5.负责纳税申报和各类财务报表的编制工作； <br />6.完成上级安排的临时工作。 <br />任职要求： <br />1.本科及以上学历，会计学、财务管理专业，有会计证 <br />2.有3年以上的工作经验 <br />3.熟悉国家各项相关财务、税务、审计等法规政策，能熟悉的使用office办公软件，熟悉使用财务应用软件； <br />4.责任心和原则性强，严禁勤勉，抗压能力强。 <br />
-                        </p>
-												<p class="tabs_items-info-p2"><span>简历请投放至邮箱：</span><span style="color:#2D6EC1;">18518161909@163.com</span></p>
-												<a href="javascript:0;" class="items-info-btn">投递简历</a>
-                      </div>
-										</div>
+                    <div><a href="javascript:0;">财务税收</a></div>
+                    <div><a href="javascript:0;">财务税收</a></div>
+                    <div><a href="javascript:0;">财务税收</a></div>
+                    <div><a href="javascript:0;">财务税收</a></div>
+                    <div><a href="javascript:0;">财务税收</a></div>
                   </div>
-
-                  <!-- 手风琴 结束 -->
                 </div>
-                <!-- 招聘模块 结束 -->
-							</div>
+                <div class="popular-news-box">
+                  <div class="popular-news-title">热门资讯</div>
+                  <div class="popular-news-items">
+                    <ul>
+                      <li>
+                        <a href="javascript:0;">
+                          <p class="news-itemsLi-title">
+                            <img src="./img/news/icon-jx.png" alt="" />
+                            <span>全国</span>
+                          </p>
+                          <p class="news-itemsLi-time">时间：2022-06-17</p>
+                        </a>
+                      </li>
 
-						</div>
+                      <li>
+                        <a href="javascript:0;">
+                          <p class="news-itemsLi-title">
+                            <img src="./img/news/icon-jx.png" alt="" />
+                            <span>全国</span>
+                          </p>
+                          <p class="news-itemsLi-time">时间：2022-06-17</p>
+                        </a>
+                      </li>
 
-					</div>
-				</div>
+                      <li>
+                        <a href="javascript:0;">
+                          <p class="news-itemsLi-title">
+                            <img src="./img/news/icon-jx.png" alt="" />
+                            <span>全国</span>
+                          </p>
+                          <p class="news-itemsLi-time">时间：2022-06-17</p>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xl-9">
+              <div class="row page-btn-box">
+                <div class="col-xl-6">
+                  <button class="page-btn">
+                    <div class="page-btn-l">上一篇</div>
+                    <div class="page-btn-r">
+                      <p class="btn-p-1">喜报‖河北国兴税务2021年度经营收入居全国百强所第67名67名67名</p>
+                      <p class="btn-p-time">时间：2022-07-01</p>
+                    </div>
+                  </button>
+                </div>
+                <div class="col-xl-6">
+                  <button class="page-btn">
+                    <div class="page-btn-l">下一篇</div>
+                    <div class="page-btn-r">
+                      <p class="btn-p-1">华文财税联合党支部七月主题党会‖不忘初心使命，厚使命，厚</p>
+                      <p class="btn-p-time">时间：2022-07-01</p>
+                    </div>
+                  </button>
+                </div>
+                <img src="./img/icon-ewm.png" alt="" class="ewmimg-img" />
+              </div>
+            </div>
+          </div>
+        </div>
 				<!-- 内容区域 结束 -->
-				
 			</div>
-			
 		</section>
 
-		<!-- footer 开始 -->
+
+    		<!-- footer 开始 -->
 		<footer class="footer">
 			<div class="footer-info-box">
 				<div class="container-fluid">
