--- a/aboutUs.html
+++ b/aboutUs.html
@@ -6,113 +6,121 @@
 <html lang="zxx">
 	<!--<![endif]-->
 
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0">
-		<title>华文财税</title>
-		<meta name="keywords" content="" />
-		<meta name="description" content="" />
-		<!--网站图标-->
-		<link rel="shortcut icon" type="image/png" href="./img/favicon.png" />
-		<!--Bootstrap -->
-		<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-		<!--字体 样式-->
-		<link rel="stylesheet" type="text/css" href="css/fontawesome.all.min.css">
-		<link rel="stylesheet" type="text/css" href="css/pe-icon-7-stroke.css">
-		<link rel="stylesheet" type="text/css" href="css/helper.css">
-		<!-- 动画 -->
-		<link rel="stylesheet" type="text/css" href="css/animate.css">
-		<!--弹出框插件 -->
-		<link rel="stylesheet" type="text/css" href="css/venobox.css">
-		<!--轮播 banner-->
-		<link rel="stylesheet" type="text/css" href="css/owl.carousel.css">
-		<link rel="stylesheet" type="text/css" href="css/owl.transitions.css">
-		<!--公共样式-->
-		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<!--响应样式 -->
-		<link rel="stylesheet" type="text/css" href="css/responsive.css">
-	</head>
-	<script type="text/javascript">
-		(function() {
-			var whdef = 100 / 1920; // 表示1920的设计图,1rem == 100px 其他值都可以
-			// var wH = window.innerHeight;// 当前窗口的高度
-			var wW = window.innerWidth; // 当前窗口的宽度
-			var rem = wW * whdef; // 以默认比例值乘以当前窗口宽度,得到该宽度下的相应FONT-SIZE值
-			document.getElementsByTagName("html")[0].style.fontSize = rem + 'px'
-		})()
-	</script>
-	<body>
-
-		<!-- 头部导航 开始 -->
-		<header id="mainHeader" class="header">
-			<!-- Start Navigation -->
-			<nav class="navbar navbar-expand-lg navbar-light p-0">
-				<div class="container-fluid">
-					<a href="index.html">
-						<img src="img/logo.png" alt="" class="logo">
-					</a>
-					<button class="navbar-toggler" type="button" data-toggle="collapse"
-						data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-						aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
-					</button>
-
-					<div class="collapse navbar-collapse" id="navbarSupportedContent">
-						<ul class="navbar-nav ml-auto">
-							<!-- <li class="nav-item active">
-							<a class="nav-link active" href="index.html">Home</a>
-						</li> -->
-							<li class="nav-item dropdown">
-								<a class="nav-link active dropdown-toggle" href="#" id="aboutUs" role="button"
-									data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-									关于我们
+	<!DOCTYPE html>
+	<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
+	<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
+	<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
+	<!--[if (gte IE 9)|!(IE)]><!-->
+	<html lang="zxx">
+		<!--<![endif]-->
+	
+		<head>
+			<meta charset="utf-8">
+			<meta http-equiv="X-UA-Compatible" content="IE=edge">
+			<meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0">
+			<title>华文财税</title>
+			<meta name="keywords" content="" />
+			<meta name="description" content="" />
+			<!--网站图标-->
+			<link rel="shortcut icon" type="image/png" href="./img/favicon.png" />
+			<!--Bootstrap -->
+			<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+			<!--字体 样式-->
+			<link rel="stylesheet" type="text/css" href="css/fontawesome.all.min.css">
+			<link rel="stylesheet" type="text/css" href="css/pe-icon-7-stroke.css">
+			<link rel="stylesheet" type="text/css" href="css/helper.css">
+			<!-- 动画 -->
+			<link rel="stylesheet" type="text/css" href="css/animate.css">
+			<!--弹出框插件 -->
+			<link rel="stylesheet" type="text/css" href="css/venobox.css">
+			<!--轮播 banner-->
+			<link rel="stylesheet" type="text/css" href="css/owl.carousel.css">
+			<link rel="stylesheet" type="text/css" href="css/owl.transitions.css">
+			<!--公共样式-->
+			<link rel="stylesheet" type="text/css" href="css/style.css">
+			<!--响应样式 -->
+			<link rel="stylesheet" type="text/css" href="css/responsive.css">
+		</head>
+		<script type="text/javascript">
+			(function() {
+				var whdef = 100 / 1920; // 表示1920的设计图,1rem == 100px 其他值都可以
+				// var wH = window.innerHeight;// 当前窗口的高度
+				var wW = window.innerWidth; // 当前窗口的宽度
+				var rem = wW * whdef; // 以默认比例值乘以当前窗口宽度,得到该宽度下的相应FONT-SIZE值
+				document.getElementsByTagName("html")[0].style.fontSize = rem + 'px'
+			})()
+		</script>
+		<body>
+	
+			<!-- 头部导航 开始 -->
+			<header id="mainHeader" class="header">
+				<!-- Start Navigation -->
+				<nav class="navbar navbar-expand-lg navbar-light p-0">
+					<div class="container-fluid">
+						<a href="index.html">
+							<img src="img/logo.png" alt="" class="logo">
+						</a>
+						<button class="navbar-toggler" type="button" data-toggle="collapse"
+							data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+							aria-expanded="false" aria-label="Toggle navigation">
+							<span class="navbar-toggler-icon"></span>
+						</button>
+	
+						<div class="collapse navbar-collapse" id="navbarSupportedContent">
+							<ul class="navbar-nav ml-auto">
+								<!-- <li class="nav-item active">
+								<a class="nav-link active" href="index.html">Home</a>
+							</li> -->
+								<li class="nav-item dropdown">
+									<a class="nav-link dropdown-toggle" href="#" id="aboutUs" role="button"
+										data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+										关于我们
+									</a>
+									<div class="dropdown-menu" aria-labelledby="aboutUs">
+										<a class="dropdown-item" href="aboutUs.html">公司概况</a>
+										<a class="dropdown-item" href="aboutUs.html">管理团队</a>
+										<a class="dropdown-item" href="aboutUs.html">分支机构</a>
+										<a class="dropdown-item" href="aboutUs.html">发展历程</a>
+										<a class="dropdown-item" href="aboutUs.html">荣誉资质</a>
+										<a class="dropdown-item" href="aboutUs.html">华文之歌</a>
+									</div>
+								</li>
+								<li class="nav-item dropdown">
+									<a class="nav-link" href="services.html">服务领域</a>
+								</li>
+	
+								<li class="nav-item dropdown">
+									<a class="nav-link dropdown-toggle" href="#" id="blog" role="button"
+										data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+										新闻中心
+									</a>
+									<div class="dropdown-menu" aria-labelledby="blog">
+										<a class="dropdown-item" href="news.html?id=1">华文动态</a>
+										<a class="dropdown-item" href="news.html?id=2">华文下午茶</a>
+										<a class="dropdown-item" href="news.html?id=3">专业解读</a>
+									</div>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="regulations.html">政策法规</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="">华文讲堂</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="joinUs.html">加入我们</a>
+								</li>
+							</ul>
+							<div class="call_btn">
+								<a href="#">
+									<i class="fas fa-phone"></i>
+									400-995-2686
 								</a>
-								<div class="dropdown-menu" aria-labelledby="aboutUs">
-									<a class="dropdown-item" href="aboutUs.html">公司概况</a>
-									<a class="dropdown-item" href="aboutUs.html">管理团队</a>
-									<a class="dropdown-item" href="aboutUs.html">分支机构</a>
-									<a class="dropdown-item" href="aboutUs.html">发展历程</a>
-									<a class="dropdown-item" href="aboutUs.html">荣誉资质</a>
-									<a class="dropdown-item" href="aboutUs.html">华文之歌</a>
-								</div>
-							</li>
-							<li class="nav-item dropdown">
-								<a class="nav-link" href="#">服务领域</a>
-							</li>
-
-							<li class="nav-item dropdown">
-								<a class="nav-link dropdown-toggle" href="#" id="blog" role="button"
-									data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-									新闻中心
-								</a>
-								<div class="dropdown-menu" aria-labelledby="blog">
-									<a class="dropdown-item" href="blog.html">华文动态</a>
-									<a class="dropdown-item" href="blogDetails.html">华文下午茶</a>
-									<a class="dropdown-item" href="blogDetails.html">专业解读</a>
-								</div>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="contact.html">政策法规</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="contact.html">华文讲堂</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="contact.html">加入我们</a>
-							</li>
-						</ul>
-						<div class="call_btn">
-							<a href="#">
-								<i class="fas fa-phone"></i>
-								400-995-2686
-							</a>
+							</div>
 						</div>
 					</div>
-				</div>
-			</nav>
-		</header>
-		<!--头部导航 结束 -->
+				</nav>
+			</header>
+			<!--头部导航 结束 -->
 
 		<!-- 背景区域 开始 -->
 		<section id="insuronbreadcrumb" class="insuronbreadcrumb">
