--- a/regulations.html
+++ b/regulations.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
@@ -115,144 +114,206 @@
 		</header>
 		<!--头部导航 结束 -->
 		<!-- 背景区域 开始 -->
-		<section id="joinUs-banner" class="joinUs-banner"></section>	
-    <!--  背景区域 结束  -->
-    
-    <!-- 项目合作条件 开始-->
-    <section class="joinUs-company-info">
+		<section id="regulationsSection" class="regulationsSection"></section>	
+		<!--  背景区域 结束  -->
+		<section class="regulations-info-box">
 			<div class="container-fluid">
-        <div class="row justify-content-center">
-          <div class="col-xl-6 company-title-imgbox">
-            <img src="./img/joinUs/company-bg-1.png" alt="" />
-          </div>
-          <div class="col-xl-6 company-title-info">
-            <p class="title-info-1">项目合作</p>
-            <div class="title-info-xian1"></div>
-            <div class="title-info-2">
-              <p>认同并遵守华文的《华文合作服务协议》</p>
-              <p>有较好的企业客户资源</p>
-              <p>勇于挑战 ，愿意投身财税行业</p>
-              <p>有丰富的企业资源，能够引荐介绍关键角色</p>
-              <div class="title-info-xian2"></div>
-              <p>依托您个人的人脉资源为我们介绍企业客户</p>
-              <p>您通过配合我们的客户经理完成与客户的沟通，实现客户签约</p>
-            </div>
-            <button class="title-info-btn">立即咨询</button>
-          </div>
-        </div>
+				<!-- 内容区域 开始 -->
+				<div class="row justify-content-center">
+					<div class="regulations-centent-box">
+						<!-- 左侧导航树 开始 -->
+						<div class="left-tree-b">
+							<div class="sidebar-btn">
+								<img src="./img/icon-treebtn.png" alt="" />
+							</div>
+							<div class="form-box">
+								<form action="" method="post">
+									<div class="input-group-box">
+										<button class="sidebar-btn-b"><img src="./img/icon-seach.png" alt="" /></button>
+										<input type="text" class="sidebar-input-b"  placeholder="请输入关键字" />
+									</div>
+								</form>
+							</div>
+							<div class="sidebar" id="sidebar">
+								<div class="sidebar-inner slimscroll">
+									<div id="sidebar-menu" class="sidebar-menu">
+										<ul>
+											<li class="menu-title"> 
+												<span>
+													<img src="./img/icon-ss.png" alt="" />税收政策法规
+												</span>
+											</li>
+											<li class="submenu">
+												<a href="javascript:void(0);">
+													<span>Multi Level</span>
+													<i class="pe-7s-E6 arrow"></i>
+												</a>
+												<ul style="display: none;">
+													<li class="submenu">
+														<a href="javascript:void(0);"> <span>Level 1</span> <span class="menu-arrow"></span></a>
+														<ul style="display: none;">
+															<li><a href="javascript:void(0);"><span>Level 2</span></a></li>
+															<li class="submenu">
+																<a href="javascript:void(0);"> <span> Level 2</span> <span class="menu-arrow"></span></a>
+																<ul style="display: none;">
+																	<li><a href="javascript:void(0);">Level 3</a></li>
+																	<li><a href="javascript:void(0);">Level 3</a></li>
+																</ul>
+															</li>
+															<li><a href="javascript:void(0);"> <span>Level 2</span></a></li>
+														</ul>
+													</li>
+													<li>
+														<a href="javascript:void(0);"> <span>Level 1</span></a>
+													</li>
+												</ul>
+											</li>
+										</ul>
+									</div>
+								</div>
+							</div>
+
+						</div>
+						<!-- 左侧导航树 结束 -->
+						<!-- 右侧模块 开始 -->
+						<div class="rifht-info-b">
+							<!-- 右侧模块 上部 开始 -->
+							<div class="rifht-imginput-box">
+								<div class="rifht-img-box">
+									<img src="./img/news/icon-zwf.png" alt="" />
+								</div>
+								<div class="rifht-input-box">
+									<form action="" id="" method="POST">
+										<!-- 输入框 -->
+										<div class="from-group group-box">
+											<label for="name">标题：</label>
+											<div class="input-div">
+												<input type="text" class="form-control"/>
+											</div>
+										</div>
+										<div class="from-group group-box">
+											<label for="name">内容：</label>
+											<div class="input-div">
+												<input type="text" class="form-control"/>
+											</div>
+										</div>
+										<div class="from-group group-box">
+											<label for="name">文号：</label>
+											<div class="input-div">
+												<input type="text" class="form-control"/>
+											</div>
+										</div>
+										<div class="slide-sel-box">
+											<div class="slide-title">税种：</div>
+											<div class="sel-list-box">
+												<div id="tax-carousel" class="tax-carousel">
+													<a href="javascript:0;">增值税</a>
+													<a href="javascript:0;">消费税</a>
+													<a href="javascript:0;">营业税</a>
+													<a href="javascript:0;">企业所得税</a>
+												</div>
+											</div>
+										</div>
+										<div class="slide-sel-box">
+											<div class="slide-title">地区：</div>
+											<div class="sel-list-box">
+												<div id="add-carousel" class="tax-carousel">
+													<a href="javascript:0;">全国</a>
+													<a href="javascript:0;">北京</a>
+													<a href="javascript:0;">上海</a>
+													<a href="javascript:0;">广州</a>
+													<a href="javascript:0;">深圳</a>
+													<a href="javascript:0;">杭州</a>
+													<a href="javascript:0;">天津</a>
+													<a href="javascript:0;">重庆</a>
+													<a href="javascript:0;">武汉</a>
+													<a href="javascript:0;">南京</a>
+												</div>
+											</div>
+										</div>
+
+
+										<div class="rifht-frm-btn">
+											<button type="submit" class="mr_btn_1">提交申请</button>
+										</div>
+									</form>
+								</div>
+							</div>
+							<!-- 右侧模块 上部 结束 -->
+							<!-- 右侧模块 下部列表 开始 -->
+							<div class="rifht-lilist-box">
+								<table class="table table-hover table-center mb-0">
+									<thead>
+										<tr>
+											<th style="width: 6rem;">文件标题名称</th>
+											<th style="width: 3.1rem;">文号</th>
+											<th style="width: 1.8rem;">发文日期</th>
+											<th style="padding-left:0.4rem;">地域</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td >
+												<a href="javascript:0;" style="width: 6rem;" class="tr-a">
+													<img src="./img/icon-jxl.png" alt="" style="width: 0.12rem;height: 0.12rem;"/>
+													<span style="padding-left: 0.09rem;">关于扩大全额退还增值税留抵税额政策行业范围有关征管事项的公告</span>
+												</a>
+											</td>
+											<td><a href="javascript:0;" style="width: 3.1rem;" class="tr-a">国家税务总局公告2022年第11号</a></td>
+											<td><a href="javascript:0;" style="width: 1.8rem;" class="tr-a">2022-06-08</a></td>
+											<td><a href="javascript:0;" style="padding-left:0.4rem;" class="tr-a">河北省邯郸市</a></td>
+										</tr>
+
+										<tr>
+											<td >
+												<a href="javascript:0;" style="width: 6rem;" class="tr-a">
+													<img src="./img/icon-jxl.png" alt="" style="width: 0.12rem;height: 0.12rem;"/>
+													<span style="padding-left: 0.09rem;">关于扩大全额退还增值税留抵税额政策行业范围有关征管事项的公告</span>
+												</a>
+											</td>
+											<td><a href="javascript:0;" style="width: 3.1rem;" class="tr-a">国家税务总局公告2022年第11号</a></td>
+											<td><a href="javascript:0;" style="width: 1.8rem;" class="tr-a">2022-06-08</a></td>
+											<td><a href="javascript:0;" style="padding-left:0.4rem;" class="tr-a">河北省邯郸市</a></td>
+										</tr>
+
+										<tr>
+											<td >
+												<a href="javascript:0;" style="width: 6rem;" class="tr-a">
+													<img src="./img/icon-jxl.png" alt="" style="width: 0.12rem;height: 0.12rem;"/>
+													<span style="padding-left: 0.09rem;">关于扩大全额退还增值税留抵税额政策行业范围有关征管事项的公告</span>
+												</a>
+											</td>
+											<td><a href="javascript:0;" style="width: 3.1rem;" class="tr-a">国家税务总局公告2022年第11号</a></td>
+											<td><a href="javascript:0;" style="width: 1.8rem;" class="tr-a">2022-06-08</a></td>
+											<td><a href="javascript:0;" style="padding-left:0.4rem;" class="tr-a">河北省邯郸市</a></td>
+										</tr>
+									</tbody>
+								</table>
+
+							</div>
+							<!-- 右侧模块 下部列表 结束 -->
+
+						</div>
+						<!-- 右侧模块 结束 -->
+					</div>
+				</div>
+				<!-- 内容区域 结束 -->
 			</div>
-    </section>
-    <!-- 项目合作条件 结束-->
-    <!-- 合作流程 开始-->
-    <section class="oinUs-company-lc">
-      <div class="container-fluid">
-        <div class="row justify-content-center">
-          <div class="company-lc-box">
-            <div class="lc-box-items">
-              <img src="./img/joinUs/company-icon-1.png" alt="" />
-              <p>联系负责人</p>
-            </div>
-            <div class="lc-box-items">
-              <img src="./img/joinUs/company-icon-2.png" alt="" />
-              <p>申请成功</p>
-            </div>
-            <div class="lc-box-items">
-              <img src="./img/joinUs/company-icon-3.png" alt="" />
-              <p>一对一指导</p>
-            </div>
-            <div class="lc-box-items">
-              <img src="./img/joinUs/company-icon-4.png" alt="" />
-              <p>开展业务</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- 合作流程 结束-->
-
-    <!-- 我们的客户 开始 -->
-    <section id="customer" class="customer">
-      <div class="container-fluid">
-        <div class="row justify-content-center">
-          <div class="col-lg-12 col-md-12">
-            <div class="section-title-box">
-              <div>
-                <div class="section-l-title">我们的客户</div>
-                <p class="section-l-eltitle">Customer</p>
-              </div>
-            </div>
-            <div class="customer-bg-box">
-              <img src="./img/customer-bg1.png" alt="">
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- 我们的客户 结束 -->
-
-
-    <!-- 加入我们 开始-->
-    <section class="joinUs-company-joinbox">
-        <div class="container-fluid">
-          <div class="row justify-content-center">
-            <div class="col-xl-6 company-joinbox-i">
-              <p class="company-joinbox-i-title">加入我们</p>
-              <div class="joinbox-i-xian1"></div>
-              <form action="" id="" method="POST">
-                  <div class="row">
-                    <div class="col-md-6">
-                      <div class="form-group form-element">
-                        <input type="text" class="form-input input-field" id="name" name="name" placeholder="姓名">
-                      </div>
-                    </div>
-                    <div class="col-md-6">
-                      <div class="form-group form-element">
-                        <input type="text" class="form-input input-field" id="tel" name="tel" placeholder="电话">
-                      </div>
-                    </div>
-                  </div>
-                  <div class="row">
-                      <div class="col-md-6">
-                        <div class="form-group form-element">
-                          <select class="form-control select">
-                              <option value='add0'disabled selected hidden>省份</option>
-                              <option value='add1' style="display: block;margin: 20px;font-size: 16px;">北京</option>
-                              <option value='add2'>上海</option>
-                            </select>
-                        </div>
-                      </div>
-                    <div class="col-md-6">
-                        <div class="form-group form-element">
-                          <select class="form-control select">
-                            <option value='city0'disabled selected hidden>城市</option>
-                            <option value='city1' style="display: block;margin: 20px;font-size: 16px;">北京</option>
-                            <option value='city2'>上海</option>
-                          </select>
-                        </div>
-                      </div>
-                  </div>
-                  <div class="contact-frm-btn">
-                    <button type="submit" class="mr_btn_1">提交申请</button>
-                    <button class="mr_btn_2">400-995-2686</button>
-                  </div>
-							</form>
-
-            </div>
-
-            <div class="col-xl-6 company-joinbox-i">
-              <div class="company-joinbox-img">
-                <img src="./img/joinUs/company-bg-2.png" alt="" />
-              </div>
-            </div>
-          </div>
-        </div>
-    </section>
-    <!-- 加入我们 结束-->
+		</section>
 
 
 
 
-		<!-- footer 开始 -->
+
+
+
+
+
+
+
+
+
+    		<!-- footer 开始 -->
 		<footer class="footer">
 			<div class="footer-info-box">
 				<div class="container-fluid">
