--- a/services.html
+++ b/services.html
@@ -87,19 +87,19 @@
 									新闻中心
 								</a>
 								<div class="dropdown-menu" aria-labelledby="blog">
-									<a class="dropdown-item" href="blog.html">华文动态</a>
-									<a class="dropdown-item" href="blogDetails.html">华文下午茶</a>
-									<a class="dropdown-item" href="blogDetails.html">专业解读</a>
+									<a class="dropdown-item" href="news.html?id=1">华文动态</a>
+									<a class="dropdown-item" href="news.html?id=2">华文下午茶</a>
+									<a class="dropdown-item" href="news.html?id=3">专业解读</a>
 								</div>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="contact.html">政策法规</a>
+								<a class="nav-link" href="regulations.html">政策法规</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="contact.html">华文讲堂</a>
+								<a class="nav-link" href="">华文讲堂</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="contact.html">加入我们</a>
+								<a class="nav-link" href="joinUs.html">加入我们</a>
 							</li>
 						</ul>
 						<div class="call_btn">
